Restructured + Refactored code

--- a/client/sites/colorful-canvas.html
+++ b/client/sites/colorful-canvas.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="colourful-canvas.css" />
+    <link rel="stylesheet" href="colorful-canvas.css" />
     <link rel="stylesheet" href="nav.css" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <script src="colourful-canvas.js" defer></script>
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.ico"
+      type="image/x-icon"
+    />
+    <script type="module" src="canvas.js" defer></script>
     <title>Create New Grid</title>
   </head>
   <body>
     <nav class="navigation">
-      <a class="nav-element home-element" href="/home.html">Home</a>
-      <a class="nav-element current-element" href="/colourful-canvas.html"
+      <a class="nav-element home-element" href="home.html">Home</a>
+      <a class="nav-element current-element" href="colorful-canvas.html"
         >Create New Grid</a
       >
       <a class="nav-element" href="">About</a>
       <a class="nav-element lang-element" href="">ENG</a>
     </nav>
-    <div id="colourful-canvas" class="container">
+    <div id="colorful-canvas" class="container">
       <div class="texture-container">
         <div class="texture-top-container">
           <div class="texture-ball"></div>
@@ -66,119 +70,140 @@
               </div>
             </div>
             <div class="settings-grid-selection-container">
-              <h6>Colour of the grid</h6>
-              <div id="grid-colours" class="settings-grid-selection-grid">
+              <h6>Color of the grid</h6>
+              <div id="grid-colors" class="settings-grid-selection-grid">
                 <div
-                  class="small-colour-palett"
-                  style="background-color: #f9db6d"
+                  class="small-color-palett"
+                  style="background-color: #000000"
                 ></div>
                 <div
-                  class="small-colour-palett"
-                  style="background-color: #ffd8be"
-                ></div>
-                <div
-                  class="small-colour-palett"
-                  style="background-color: #ea2b1f"
-                ></div>
-                <div
-                  class="small-colour-palett"
-                  style="background-color: #cafe48"
-                ></div>
-                <div
-                  class="small-colour-palett"
-                  style="background-color: #7189ff"
-                ></div>
-                <div
-                  class="small-colour-palett"
+                  class="small-color-palett"
                   style="background-color: #2708a0"
                 ></div>
                 <div
-                  class="small-colour-palett"
-                  style="background-color: #000000"
+                  class="small-color-palett"
+                  style="background-color: #7189ff"
+                ></div>
+                <div
+                  class="small-color-palett"
+                  style="background-color: #cafe48"
+                ></div>
+                <div
+                  class="small-color-palett"
+                  style="background-color: #ea2b1f"
+                ></div>
+                <div
+                  class="small-color-palett"
+                  style="background-color: #ffd400"
+                ></div>
+                <div
+                  class="small-color-palett"
+                  style="background-color: #ffd8be"
+                ></div>
+                <div
+                  class="small-color-palett"
+                  style="background-color: #ffffff"
                 ></div>
               </div>
             </div>
           </div>
         </div>
-        <div class="settings-colours-container">
-          <h4>Colours</h4>
-          <div id="colours" class="settings-colours-selection-grid">
+        <div class="settings-colors-container">
+          <h4>Colors</h4>
+          <div id="colors" class="settings-colors-selection-grid">
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
               style="background-color: #ffffff"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
               style="background-color: #e5dcc5"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
               style="background-color: #ffd8be"
             ></div>
+
             <div
-              class="big-colour-palett"
-              style="background-color: #f9db6d"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #ff9f1c"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #cafe48"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #a4f9c8"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #8ee3ef"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #a491d3"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #000000"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #1b065e"
-            ></div>
-            <div
-              class="big-colour-palett"
-              style="background-color: #2708a0"
-            ></div>
-            <div
-              class="big-colour-palett"
+              class="big-color-palett"
               style="background-color: #ffd400"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
+              style="background-color: #ff9f1c"
+            ></div>
+
+            <div
+              class="big-color-palett"
               style="background-color: #ea2b1f"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
+              style="background-color: #f72585"
+            ></div>
+
+            <div
+              class="big-color-palett"
               style="background-color: #004f2d"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
               style="background-color: #138a36"
             ></div>
+
             <div
-              class="big-colour-palett"
+              class="big-color-palett"
+              style="background-color: #000000"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #7f5539"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #1b065e"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #2708a0"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #7b2cbf"
+            ></div>
+
+            <div
+              class="big-color-palett"
               style="background-color: #7189ff"
             ></div>
+
             <div
-              class="big-colour-palett"
-              style="background-color: #9f9aa4"
+              class="big-color-palett"
+              style="background-color: #a491d3"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #a4f9c8"
+            ></div>
+
+            <div
+              class="big-color-palett"
+              style="background-color: #cafe48"
             ></div>
           </div>
         </div>
         <div class="settings-buttons-container">
-          <button class="settings-button settings-button-save" style="">
+          <button class="settings-button settings-button-save">
             Save your work
           </button>
           <button id="export" class="settings-button settings-button-export">
