--- a/client/sites/home.html
+++ b/client/sites/home.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="nav.css" />
     <link rel="stylesheet" href="home.css" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <script src="home.js" defer></script>
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
+    <script type="module" src="home.js" defer></script>
     <title>Home</title>
   </head>
   <body>
     <nav class="navigation sticky">
-      <a class="nav-element home-element current-element" href="/home.html"
+      <a class="nav-element home-element current-element" href="home.html"
         >Home</a
       >
-      <a class="nav-element" href="/colourful-canvas.html">Create New Grid</a>
+      <a class="nav-element" href="colorful-canvas.html">Create New Grid</a>
       <a class="nav-element" href="">About</a>
       <a class="nav-element lang-element" href="">ENG</a>
       <div class="suse-container">
-        <img class="suse-logo" src="./assets/suse.png"></img>
+        <img class="suse-logo" src="../assets/suse.png"></img>
       </div>
     </nav>
     <div class="fake-nav"></div>
@@ -29,7 +29,7 @@
         <div id="box" class="box-container">
           <h2>Grid Box Painting</h2>
           <p>Kurzer Beschreibungstext, Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-          <a href="colourful-canvas.html" class="box-button">
+          <a href="colorful-canvas.html" class="box-button">
             Create A New Grid Painting
           </a>
         </div>
