Send grid info to server for storage

--- a/client/sites/colorful-canvas.html
+++ b/client/sites/colorful-canvas.html
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="settings-buttons-container">
-          <button class="settings-button settings-button-save">
+          <button id="save" class="settings-button settings-button-save">
             Save your work
           </button>
           <button id="export" class="settings-button settings-button-export">
