Bugfix + added pages

--- a/client/sites/colorful-canvas.html
+++ b/client/sites/colorful-canvas.html
@@ -20,7 +20,7 @@
       <a class="nav-element current-element" href="colorful-canvas.html"
         >Create New Grid</a
       >
-      <a class="nav-element" href="">About</a>
+      <a class="nav-element" href="about.html">About</a>
       <a class="nav-element lang-element" href="">ENG</a>
     </nav>
     <div id="colorful-canvas" class="container">
