--- a/client/sites/home.html
+++ b/client/sites/home.html
@@ -21,7 +21,7 @@
         >Home</a
       >
       <a class="nav-element" href="colorful-canvas.html">Create New Grid</a>
-      <a class="nav-element" href="">About</a>
+      <a class="nav-element" href="about.html">About</a>
       <a class="nav-element lang-element" href="">ENG</a>
       <div class="suse-container">
         <img class="suse-logo" src="../assets/suse.png" />
