--- a/client/sites/colorful-canvas.html
+++ b/client/sites/colorful-canvas.html
@@ -12,6 +12,7 @@
       type="image/x-icon"
     />
     <script type="module" src="canvas.js" defer></script>
+    <script type="module" src="translate.js" defer></script>
     <title>Create New Grid</title>
   </head>
   <body>
