--- a/client/sites/about.html
+++ b/client/sites/about.html
@@ -10,6 +10,7 @@
       href="../assets/favicon.ico"
       type="image/x-icon"
     />
+    <script type="module" src="translate.js" defer></script>
     <title>About</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
       <a class="nav-element home-element" href="home.html">Home</a>
       <a class="nav-element" href="colorful-canvas.html">Create New Grid</a>
       <a class="nav-element current-element" href="about.htmli">About</a>
-      <a class="nav-element lang-element" href="">ENG</a>
+      <a class="nav-element" id="lang-element">ENG</a>
     </nav>
     <div class="container"></div>
   </body>
