--- a/client/sites/colorful-canvas.html
+++ b/client/sites/colorful-canvas.html
@@ -22,7 +22,7 @@
         >Create New Grid</a
       >
       <a class="nav-element" href="about.html">About</a>
-      <a class="nav-element lang-element" href="">ENG</a>
+      <a class="nav-element" id="lang-element">ENG</a>
     </nav>
     <div id="colorful-canvas" class="container">
       <div class="texture-container">
